# tailwind

./: Cargo.toml  README.md  memory.x
.cargo/: config
.vim/: coc-settings.json
src/: main.rs
